overlapping text issue on the recipe form fixed

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -285,7 +285,8 @@ footer>p {
     background-color: #e1a052;
 }
 .tag-warning {
-    line-height: .25rem;
+    line-height: .75rem;
+    padding: .5rem;
 }
 
 /* single recipe page styles */
